gccida/c3/declare_nonlocal_label
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/declare_nonlocal_label/src/stmt.c:1231:28: error: use of undeclared identifier 'machine_mode'
v3 = assign_stack_local( ( machine_mode)v2, mode_size[v2], 0); 
                           ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/declare_nonlocal_label/src/obj/stmt.o] Error 1
